samples/_failures_safe/1761309362_ac9896_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_68692114.c: In function ‘main’:
./samples/SAFE/__tmp_68692114.c:147:31: error: expected ‘)’ at end of input
  147 |         double ratio = (double
      |                        ~      ^
      |                               )
./samples/SAFE/__tmp_68692114.c:147:9: error: expected declaration or statement at end of input
  147 |         double ratio = (double
      |         ^~~~~~
./samples/SAFE/__tmp_68692114.c:147:9: error: expected declaration or statement at end of input
